parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS
    CONST
    FINAL
    FUNCTION
    INTEGER
    NOT
    NULL

Grammar

Rule 0     S' -> topLevel
Rule 1     topLevel -> variableDeclaration PCOMMA
Rule 2     topLevel -> variableDeclaration PCOMMA topLevel
Rule 3     topLevel -> functionSignature functionBody
Rule 4     topLevel -> functionSignature functionBody topLevel
Rule 5     variableDeclaration -> declaredIdentifier
Rule 6     variableDeclaration -> variableDeclaration COMMA ID
Rule 7     declaredIdentifier -> voidOrType ID
Rule 8     declaredIdentifier -> expression
Rule 9     voidOrType -> type
Rule 10    type -> VAR
Rule 11    type -> INT
Rule 12    type -> FLOAT
Rule 13    type -> CHAR
Rule 14    type -> STRING
Rule 15    type -> VOID
Rule 16    functionSignature -> ID formalParameterList
Rule 17    functionSignature -> voidOrType ID formalParameterList
Rule 18    formalParameterList -> LPAREN RPAREN
Rule 19    formalParameterList -> LPAREN normalFormalParameters RPAREN
Rule 20    normalFormalParameters -> simpleFormalParameter
Rule 21    normalFormalParameters -> simpleFormalParameter COMMA normalFormalParameters
Rule 22    simpleFormalParameter -> voidOrType ID
Rule 23    simpleFormalParameter -> expression
Rule 24    functionBody -> block
Rule 25    block -> LCHAV statements RCHAV
Rule 26    block -> LCHAV RCHAV
Rule 27    statements -> statement statements
Rule 28    statements -> statement
Rule 29    statement -> nonLabelledStatement
Rule 30    nonLabelledStatement -> block
Rule 31    nonLabelledStatement -> expressionStatement
Rule 32    nonLabelledStatement -> localVariableDeclaration
Rule 33    nonLabelledStatement -> returnStatement
Rule 34    nonLabelledStatement -> ifStatement
Rule 35    nonLabelledStatement -> forStatement
Rule 36    nonLabelledStatement -> whileStatement
Rule 37    nonLabelledStatement -> doStatement
Rule 38    nonLabelledStatement -> switchStatement
Rule 39    nonLabelledStatement -> breakStatement
Rule 40    localVariableDeclaration -> initializedVariableDeclaration PCOMMA
Rule 41    initializedVariableDeclaration -> declaredIdentifier
Rule 42    initializedVariableDeclaration -> declaredIdentifier ATRIBUIR expression
Rule 43    initializedVariableDeclaration -> declaredIdentifier ATRIBUIR listLiteral
Rule 44    initializedVariableDeclaration -> listLiteralID ATRIBUIR expression
Rule 45    expressionStatement -> PCOMMA
Rule 46    expressionStatement -> expression PCOMMA
Rule 47    expression -> orExpression
Rule 48    orExpression -> andExpression
Rule 49    orExpression -> orExpression OR andExpression
Rule 50    andExpression -> equalityExpression
Rule 51    andExpression -> andExpression AND equalityExpression
Rule 52    equalityExpression -> relacionalExpression
Rule 53    equalityExpression -> equalityExpression IGUAL relacionalExpression
Rule 54    equalityExpression -> equalityExpression NEG relacionalExpression
Rule 55    relacionalExpression -> addExpression
Rule 56    relacionalExpression -> relacionalExpression MENOR addExpression
Rule 57    relacionalExpression -> relacionalExpression MAIOR addExpression
Rule 58    relacionalExpression -> relacionalExpression MENORI addExpression
Rule 59    relacionalExpression -> relacionalExpression MAIORI addExpression
Rule 60    addExpression -> multExpression
Rule 61    addExpression -> addExpression SOMA multExpression
Rule 62    addExpression -> addExpression SUBTRAIR multExpression
Rule 63    multExpression -> unaryExpression
Rule 64    multExpression -> multExpression VEZES unaryExpression
Rule 65    multExpression -> multExpression DIVIDIR unaryExpression
Rule 66    multExpression -> multExpression RESTO unaryExpression
Rule 67    unaryExpression -> primary
Rule 68    unaryExpression -> functionCall
Rule 69    unaryExpression -> unaryExpression SOMASOMA
Rule 70    unaryExpression -> unaryExpression SUBSUB
Rule 71    functionCall -> functionSignature
Rule 72    primary -> literal
Rule 73    primary -> LPAREN expression RPAREN
Rule 74    literal -> ID
Rule 75    literal -> booleanLiteral
Rule 76    literal -> listLiteralID
Rule 77    literal -> NUMBER
Rule 78    literal -> LITERAL_STRING
Rule 79    listLiteral -> LCON expressionList RCON
Rule 80    listLiteralID -> ID listLiteral
Rule 81    booleanLiteral -> TRUE
Rule 82    booleanLiteral -> FALSE
Rule 83    expressionList -> expression COMMA
Rule 84    expressionList -> expression
Rule 85    expressionList -> expression COMMA expressionList
Rule 86    returnStatement -> RETURN PCOMMA
Rule 87    returnStatement -> RETURN expression PCOMMA
Rule 88    ifStatement -> IF LPAREN expression RPAREN statement
Rule 89    ifStatement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 90    forStatement -> FOR LPAREN forLoopParts RPAREN statement
Rule 91    forLoopParts -> forInitializerStatement PCOMMA
Rule 92    forLoopParts -> forInitializerStatement PCOMMA expressionList
Rule 93    forLoopParts -> forInitializerStatement expression PCOMMA
Rule 94    forLoopParts -> forInitializerStatement expression PCOMMA expressionList
Rule 95    forInitializerStatement -> localVariableDeclaration
Rule 96    forInitializerStatement -> PCOMMA
Rule 97    forInitializerStatement -> expression PCOMMA
Rule 98    whileStatement -> WHILE LPAREN expression RPAREN statement
Rule 99    doStatement -> DO statement WHILE LPAREN expression RPAREN PCOMMA
Rule 100   switchStatement -> SWITCH LPAREN expression RPAREN LCHAV switchCaseRepetition RCHAV
Rule 101   switchStatement -> SWITCH LPAREN expression RPAREN LCHAV switchCaseRepetition defaultCase RCHAV
Rule 102   switchCaseRepetition -> switchCase switchCaseRepetition
Rule 103   switchCaseRepetition -> switchCase
Rule 104   switchCase -> CASE expression PONTOS statements
Rule 105   defaultCase -> DEFAULT PONTOS statements
Rule 106   label -> ID PONTOS
Rule 107   breakStatement -> BREAK PCOMMA
Rule 108   breakStatement -> BREAK ID PCOMMA

Terminals, with rules where they appear

AND                  : 51
ATRIBUIR             : 42 43 44
BREAK                : 107 108
CASE                 : 104
CHAR                 : 13
CLASS                : 
COMMA                : 6 21 83 85
CONST                : 
DEFAULT              : 105
DIVIDIR              : 65
DO                   : 99
ELSE                 : 89
FALSE                : 82
FINAL                : 
FLOAT                : 12
FOR                  : 90
FUNCTION             : 
ID                   : 6 7 16 17 22 74 80 106 108
IF                   : 88 89
IGUAL                : 53
INT                  : 11
INTEGER              : 
LCHAV                : 25 26 100 101
LCON                 : 79
LITERAL_STRING       : 78
LPAREN               : 18 19 73 88 89 90 98 99 100 101
MAIOR                : 57
MAIORI               : 59
MENOR                : 56
MENORI               : 58
NEG                  : 54
NOT                  : 
NULL                 : 
NUMBER               : 77
OR                   : 49
PCOMMA               : 1 2 40 45 46 86 87 91 92 93 94 96 97 99 107 108
PONTOS               : 104 105 106
RCHAV                : 25 26 100 101
RCON                 : 79
RESTO                : 66
RETURN               : 86 87
RPAREN               : 18 19 73 88 89 90 98 99 100 101
SOMA                 : 61
SOMASOMA             : 69
STRING               : 14
SUBSUB               : 70
SUBTRAIR             : 62
SWITCH               : 100 101
TRUE                 : 81
VAR                  : 10
VEZES                : 64
VOID                 : 15
WHILE                : 98 99
error                : 

Nonterminals, with rules where they appear

addExpression        : 55 56 57 58 59 61 62
andExpression        : 48 49 51
block                : 24 30
booleanLiteral       : 75
breakStatement       : 39
declaredIdentifier   : 5 41 42 43
defaultCase          : 101
doStatement          : 37
equalityExpression   : 50 51 53 54
expression           : 8 23 42 44 46 73 83 84 85 87 88 89 93 94 97 98 99 100 101 104
expressionList       : 79 85 92 94
expressionStatement  : 31
forInitializerStatement : 91 92 93 94
forLoopParts         : 90
forStatement         : 35
formalParameterList  : 16 17
functionBody         : 3 4
functionCall         : 68
functionSignature    : 3 4 71
ifStatement          : 34
initializedVariableDeclaration : 40
label                : 
listLiteral          : 43 80
listLiteralID        : 44 76
literal              : 72
localVariableDeclaration : 32 95
multExpression       : 60 61 62 64 65 66
nonLabelledStatement : 29
normalFormalParameters : 19 21
orExpression         : 47 49
primary              : 67
relacionalExpression : 52 53 54 56 57 58 59
returnStatement      : 33
simpleFormalParameter : 20 21
statement            : 27 28 88 89 89 90 98 99
statements           : 25 27 104 105
switchCase           : 102 103
switchCaseRepetition : 100 101 102
switchStatement      : 38
topLevel             : 2 4 0
type                 : 9
unaryExpression      : 63 64 65 66 69 70
variableDeclaration  : 1 2 6
voidOrType           : 7 17 22
whileStatement       : 36

Parsing method: LALR

state 0

    (0) S' -> . topLevel
    (1) topLevel -> . variableDeclaration PCOMMA
    (2) topLevel -> . variableDeclaration PCOMMA topLevel
    (3) topLevel -> . functionSignature functionBody
    (4) topLevel -> . functionSignature functionBody topLevel
    (5) variableDeclaration -> . declaredIdentifier
    (6) variableDeclaration -> . variableDeclaration COMMA ID
    (16) functionSignature -> . ID formalParameterList
    (17) functionSignature -> . voidOrType ID formalParameterList
    (7) declaredIdentifier -> . voidOrType ID
    (8) declaredIdentifier -> . expression
    (9) voidOrType -> . type
    (47) expression -> . orExpression
    (10) type -> . VAR
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . CHAR
    (14) type -> . STRING
    (15) type -> . VOID
    (48) orExpression -> . andExpression
    (49) orExpression -> . orExpression OR andExpression
    (50) andExpression -> . equalityExpression
    (51) andExpression -> . andExpression AND equalityExpression
    (52) equalityExpression -> . relacionalExpression
    (53) equalityExpression -> . equalityExpression IGUAL relacionalExpression
    (54) equalityExpression -> . equalityExpression NEG relacionalExpression
    (55) relacionalExpression -> . addExpression
    (56) relacionalExpression -> . relacionalExpression MENOR addExpression
    (57) relacionalExpression -> . relacionalExpression MAIOR addExpression
    (58) relacionalExpression -> . relacionalExpression MENORI addExpression
    (59) relacionalExpression -> . relacionalExpression MAIORI addExpression
    (60) addExpression -> . multExpression
    (61) addExpression -> . addExpression SOMA multExpression
    (62) addExpression -> . addExpression SUBTRAIR multExpression
    (63) multExpression -> . unaryExpression
    (64) multExpression -> . multExpression VEZES unaryExpression
    (65) multExpression -> . multExpression DIVIDIR unaryExpression
    (66) multExpression -> . multExpression RESTO unaryExpression
    (67) unaryExpression -> . primary
    (68) unaryExpression -> . functionCall
    (69) unaryExpression -> . unaryExpression SOMASOMA
    (70) unaryExpression -> . unaryExpression SUBSUB
    (72) primary -> . literal
    (73) primary -> . LPAREN expression RPAREN
    (71) functionCall -> . functionSignature
    (74) literal -> . ID
    (75) literal -> . booleanLiteral
    (76) literal -> . listLiteralID
    (77) literal -> . NUMBER
    (78) literal -> . LITERAL_STRING
    (81) booleanLiteral -> . TRUE
    (82) booleanLiteral -> . FALSE
    (80) listLiteralID -> . ID listLiteral

    ID              shift and go to state 5
    VAR             shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    VOID            shift and go to state 15
    LPAREN          shift and go to state 25
    NUMBER          shift and go to state 28
    LITERAL_STRING  shift and go to state 29
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31

    topLevel                       shift and go to state 1
    variableDeclaration            shift and go to state 2
    functionSignature              shift and go to state 3
    declaredIdentifier             shift and go to state 4
    voidOrType                     shift and go to state 6
    expression                     shift and go to state 7
    type                           shift and go to state 8
    orExpression                   shift and go to state 9
    andExpression                  shift and go to state 16
    equalityExpression             shift and go to state 17
    relacionalExpression           shift and go to state 18
    addExpression                  shift and go to state 19
    multExpression                 shift and go to state 20
    unaryExpression                shift and go to state 21
    primary                        shift and go to state 22
    functionCall                   shift and go to state 23
    literal                        shift and go to state 24
    booleanLiteral                 shift and go to state 26
    listLiteralID                  shift and go to state 27

state 1

    (0) S' -> topLevel .



state 2

    (1) topLevel -> variableDeclaration . PCOMMA
    (2) topLevel -> variableDeclaration . PCOMMA topLevel
    (6) variableDeclaration -> variableDeclaration . COMMA ID

    PCOMMA          shift and go to state 32
    COMMA           shift and go to state 33


state 3

    (3) topLevel -> functionSignature . functionBody
    (4) topLevel -> functionSignature . functionBody topLevel
    (71) functionCall -> functionSignature .
    (24) functionBody -> . block
    (25) block -> . LCHAV statements RCHAV
    (26) block -> . LCHAV RCHAV

    SOMASOMA        reduce using rule 71 (functionCall -> functionSignature .)
    SUBSUB          reduce using rule 71 (functionCall -> functionSignature .)
    VEZES           reduce using rule 71 (functionCall -> functionSignature .)
    DIVIDIR         reduce using rule 71 (functionCall -> functionSignature .)
    RESTO           reduce using rule 71 (functionCall -> functionSignature .)
    SOMA            reduce using rule 71 (functionCall -> functionSignature .)
    SUBTRAIR        reduce using rule 71 (functionCall -> functionSignature .)
    MENOR           reduce using rule 71 (functionCall -> functionSignature .)
    MAIOR           reduce using rule 71 (functionCall -> functionSignature .)
    MENORI          reduce using rule 71 (functionCall -> functionSignature .)
    MAIORI          reduce using rule 71 (functionCall -> functionSignature .)
    IGUAL           reduce using rule 71 (functionCall -> functionSignature .)
    NEG             reduce using rule 71 (functionCall -> functionSignature .)
    AND             reduce using rule 71 (functionCall -> functionSignature .)
    OR              reduce using rule 71 (functionCall -> functionSignature .)
    PCOMMA          reduce using rule 71 (functionCall -> functionSignature .)
    COMMA           reduce using rule 71 (functionCall -> functionSignature .)
    LCHAV           shift and go to state 36

    functionBody                   shift and go to state 34
    block                          shift and go to state 35

state 4

    (5) variableDeclaration -> declaredIdentifier .

    PCOMMA          reduce using rule 5 (variableDeclaration -> declaredIdentifier .)
    COMMA           reduce using rule 5 (variableDeclaration -> declaredIdentifier .)


state 5

    (16) functionSignature -> ID . formalParameterList
    (74) literal -> ID .
    (80) listLiteralID -> ID . listLiteral
    (18) formalParameterList -> . LPAREN RPAREN
    (19) formalParameterList -> . LPAREN normalFormalParameters RPAREN
    (79) listLiteral -> . LCON expressionList RCON

    SOMASOMA        reduce using rule 74 (literal -> ID .)
    SUBSUB          reduce using rule 74 (literal -> ID .)
    VEZES           reduce using rule 74 (literal -> ID .)
    DIVIDIR         reduce using rule 74 (literal -> ID .)
    RESTO           reduce using rule 74 (literal -> ID .)
    SOMA            reduce using rule 74 (literal -> ID .)
    SUBTRAIR        reduce using rule 74 (literal -> ID .)
    MENOR           reduce using rule 74 (literal -> ID .)
    MAIOR           reduce using rule 74 (literal -> ID .)
    MENORI          reduce using rule 74 (literal -> ID .)
    MAIORI          reduce using rule 74 (literal -> ID .)
    IGUAL           reduce using rule 74 (literal -> ID .)
    NEG             reduce using rule 74 (literal -> ID .)
    AND             reduce using rule 74 (literal -> ID .)
    OR              reduce using rule 74 (literal -> ID .)
    PCOMMA          reduce using rule 74 (literal -> ID .)
    COMMA           reduce using rule 74 (literal -> ID .)
    LPAREN          shift and go to state 39
    LCON            shift and go to state 40

    formalParameterList            shift and go to state 37
    listLiteral                    shift and go to state 38

state 6

    (17) functionSignature -> voidOrType . ID formalParameterList
    (7) declaredIdentifier -> voidOrType . ID

    ID              shift and go to state 41


state 7

    (8) declaredIdentifier -> expression .

    PCOMMA          reduce using rule 8 (declaredIdentifier -> expression .)
    COMMA           reduce using rule 8 (declaredIdentifier -> expression .)


state 8

    (9) voidOrType -> type .

    ID              reduce using rule 9 (voidOrType -> type .)


state 9

    (47) expression -> orExpression .
    (49) orExpression -> orExpression . OR andExpression

    PCOMMA          reduce using rule 47 (expression -> orExpression .)
    COMMA           reduce using rule 47 (expression -> orExpression .)
    RPAREN          reduce using rule 47 (expression -> orExpression .)
    ATRIBUIR        reduce using rule 47 (expression -> orExpression .)
    RCON            reduce using rule 47 (expression -> orExpression .)
    PONTOS          reduce using rule 47 (expression -> orExpression .)
    OR              shift and go to state 42


state 10

    (10) type -> VAR .

    ID              reduce using rule 10 (type -> VAR .)


state 11

    (11) type -> INT .

    ID              reduce using rule 11 (type -> INT .)


state 12

    (12) type -> FLOAT .

    ID              reduce using rule 12 (type -> FLOAT .)


state 13

    (13) type -> CHAR .

    ID              reduce using rule 13 (type -> CHAR .)


state 14

    (14) type -> STRING .

    ID              reduce using rule 14 (type -> STRING .)


state 15

    (15) type -> VOID .

    ID              reduce using rule 15 (type -> VOID .)


state 16

    (48) orExpression -> andExpression .
    (51) andExpression -> andExpression . AND equalityExpression

    OR              reduce using rule 48 (orExpression -> andExpression .)
    PCOMMA          reduce using rule 48 (orExpression -> andExpression .)
    COMMA           reduce using rule 48 (orExpression -> andExpression .)
    RPAREN          reduce using rule 48 (orExpression -> andExpression .)
    ATRIBUIR        reduce using rule 48 (orExpression -> andExpression .)
    RCON            reduce using rule 48 (orExpression -> andExpression .)
    PONTOS          reduce using rule 48 (orExpression -> andExpression .)
    AND             shift and go to state 43


state 17
